--- a/Common/TT2Advisor.Common.csproj
+++ b/Common/TT2Advisor.Common.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>TT2Advisor.Common</AssemblyName>
+    <RootNamespace>TT2Advisor.Common</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,6 +22,11 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Seq.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
 </Project>
