--- a/SkillTree/TT2Advisor.SkillTree.csproj
+++ b/SkillTree/TT2Advisor.SkillTree.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Equipment\TT2Advisor.Equipment.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Skillz\" />
+  </ItemGroup>
+
 </Project>
